--- a/index.html
+++ b/index.html
@@ -22,7 +22,15 @@
 
     </tr>
     <br><br><br>
-    
+    <div class="navigation">
+    <ul class="hrr">
+        <li><a href="rent.html"> Прокат оборудования</a></li>
+        <li><a href="#"  class="active">Организация отдыха</a></li>
+        <li></li>
+    </ul>
+    </div>
+
+
     <div class="navigation">
         <a href="rent.html"> Прокат оборудования</a> &nbsp &nbsp
         <a href="#"  class="active">Организация отдыха</a> &nbsp &nbsp 
