add files on work 03/06/2020

--- a/sauna.html
+++ b/sauna.html
@@ -7,14 +7,13 @@
     <link rel="stylesheet" href="style.css">
     </head>
 <body>
-    <div class="content">
     <tr>
         <td>
             <img src="images/Logo.jpg" width="230" height="160" class="rightimg" alt="Логотип Picknic.by">
 
         </td>
         <td>
-            <br><br>
+            <br><br><br>
             <h1 class="sizeText">
                 Всё для отдыха на природе 
         
@@ -26,8 +25,8 @@
     <div class="navigation">
     <ul class="hrr">
         <li><a href="rent.html"> Прокат оборудования (Каталог)</a></li>
-        <li><a href="#"  class="active">Организация отдыха (Главная) </a></li>
-        <li><a href="sauna.html">Мобильная баня</a></li>
+        <li><a href="index.html" >Организация отдыха (Главная) </a></li>
+        <li><a href="sauna.html" class="active">Мобильная баня</a></li>
         <li><a href="contact.html"> Контакты </a></li>
     </ul>
     </div>
@@ -48,8 +47,7 @@
 
 
     <h2> Для доступа к каталогу товаров пройдите <a href="rent.html">по ссылке </a> </h2>
-    <br><hr><br>
-    </div>
+    <br> <hr> <br>
  <div class="footer">
     Все права защищены &copy; PICKNIC.BY
 
