--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Аренда оборудования для туристов</title>
+    <title>Контакты</title>
     <link rel="stylesheet" href="style.css">
     </head>
 <body>
@@ -22,7 +22,7 @@
         </td>
 
     </tr>
-    <br><br><br><hr>
+    <br><hr>
     <div class="navigation">
     <ul class="hrr">
         <li><a href="rent.html"> Прокат оборудования (Каталог)</a></li>
@@ -34,9 +34,9 @@
     <hr>
     <div class="headText">
         <form>
-        Ваше имя <input type="text" placeholder="Ваше имя"><br><br>
-        Номер телефона <input type="text" placeholder="номер телефона"><br><br>
-        Удобное для вас время звонка <input type="text" placeholder="с 8.00 до 9.00"><br><br>
+        Ваше имя <input type="text" class="inputValue" placeholder="Ваше имя"><br><br>
+        Номер телефона <input type="text" class="inputValue" placeholder="номер телефона"><br><br>
+        Удобное для вас время звонка <input type="text" class="inputValue" placeholder="с 8.00 до 9.00"><br><br>
         Что вы потите арендовать?<br>
         <input type="checkbox"> Организовать пикник под ключ <br><br>
         <input type="checkbox"> Арендовать палатки <br><br>
@@ -44,9 +44,10 @@
         <input type="checkbox"> Хочу всё вышеперечисленное - FullPackage<br><br>
         <input type="submit" value="Заказать звонок"> <input type="reset" value="Сбросить форму"><br><br>
         </form>
-        
+        <p>Вы можете связаться с нами по телефону +375 999 99 99 или найти нас по адресу:</p> <br>
     </div>
-
+    
+    <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Aa6d29d5909095d6b09aa0af924f1c37826a19667675ee9c6246893199cf4f7d6&amp;width=100%25&amp;height=336&amp;lang=ru_RU&amp;scroll=true"></script>
 
     <h2> Для доступа к каталогу товаров пройдите <a href="rent.html">по ссылке </a> </h2>
     <br> <hr> <br>
