--- a/rent.html
+++ b/rent.html
@@ -22,7 +22,7 @@
         </td>
 
     </tr>
-    <br><br><br><hr>
+    <br><hr>
     <div class="navigation">
     <ul class="hrr">
         <li><a href="rent.html" class="active"> Прокат оборудования (Каталог)</a></li>
@@ -36,18 +36,21 @@
     <tr>
         <td>
             <p class="rentText"> Палатка 2-х местная</p>
-            <img src="images/tent2.jpg" width="200" height="150" class="centerImg" alt="Палатка двухместная">
+            <a href="catalog/tent2.html"><img src="images/tent2.jpg" width="200" height="150" class="centerImg imgBorder" alt="Палатка двухместная"></a>
+            <p class="shortDescription"> Ширина: 210 см<br> Длина: 140 см<br> Высота 120 см  </p>
             <p class="rentText"><a href="catalog/tent2.html"> Подробнее </a></p>
         </td>
             <td>
-                <p class="rentText"> Шатер </p>
-                <img src="images/bigtent.jpg" width="200" height="150" class="centerImg" alt="Шатер">
+                <p class="rentText"> Шатер</p>
+                <a href="catalog/bigTent.html"><img src="images/bigTent.jpg" width="200" height="150" class="centerImg imgBorder" alt="Шатер"></a>
+                <p class="shortDescription">Ширина: 4 м<br> Длина: 3 м<br> Высота 2 м  </p>
                 <p class="rentText"><a href="catalog/bigTent.html"> Подробнее </a></p>
             </td>
             <td>
-                <p class="rentText"> Шатер большой 4м*7м </p>
-                <img src="images/veryBigTent.jpg" width="200" height="150" class="centerImg" alt="Шатер">
-                <p class="rentText"><a href="#"> Подробнее </a></p>
+                <p class="rentText"> Шатер большой</p>
+                <a href="catalog/veryBigTent.html"> <img src="images/veryBigTent.jpg" width="200" height="150" class="centerImg imgBorder" alt="Шатер"></a>
+                <p class="shortDescription"> Ширина: 4 м<br> Длина: 7 м<br> Высота 2,5 м </p>
+                <p class="rentText"><a href="catalog/veryBigTent.html"> Подробнее </a></p>
             </td>    
     </tr>
         <tr>
@@ -55,9 +58,10 @@
     </tr>
     </table>
 
-    <br>  <hr>  <br>
+   
     </div>  
     <div class="footer">
+        <hr>
         Все права защищены &copy; PICKNIC.BY
     
      </div>
