big add from 13.06.20

--- a/catalog/bigTent.html
+++ b/catalog/bigTent.html
@@ -54,7 +54,7 @@
     </tr>
     </table>
     <p class="heading">Подробное описание товара</p>
-    <p class="fullDesctiption">Универсальный шатер пятиугольной формы Weekend Dome с огромным внутренним помещением
+    <p class="fullDesctiption firstLet">Универсальный шатер пятиугольной формы Weekend Dome с огромным внутренним помещением
          отлично подойдет для дачи в качестве беседки. Незаменим при длительном кемпинга и на природе для 
          организации столовой зоны. Две стороны из полиэстера надежно защищают от ветра и дождя, три другие стороны
           из москитной сетки позволяют шатру отлично проветриваться и защищают от насекомых.</p>
