--- a/catalog/tent2.html
+++ b/catalog/tent2.html
@@ -52,7 +52,7 @@
     </tr>
     </table>
     <p class="heading">Подробное описание товара</p>
-    <p class="fullDesctiption">С комфортом в палатку поместятся двое взрослых, легко - два взрослых и ребенок, очень плотно - трое человек.
+    <p class="fullDesctiption firstLet">С комфортом в палатку поместятся двое взрослых, легко - два взрослых и ребенок, очень плотно - трое человек.
 
         Очень легко и просто собирать: разложить внутреннюю палатку, вставить дуги в люверсы по углам дна, пристегнуть внутреннюю палатку клипсами к дугам, сверху накрыть тентом и закрепить.
         
