--- a/catalog/veryBigTent.html
+++ b/catalog/veryBigTent.html
@@ -60,7 +60,7 @@
     </tr>
     </table>
     <p class="heading">Подробное описание товара</p>
-    <p class="fullDesctiption">Просторный тент, оформленный в виде шатра, изготовлен из прочного полиэстера
+    <p class="fullDesctiption firstLet">Просторный тент, оформленный в виде шатра, изготовлен из прочного полиэстера
          с ПВХ-покрытием . Этот материал обеспечит качественную защиту отдыхающим от любых
           атмосферных воздействий: как от солнечных лучей в жаркую погоду, так и от дождя. Каркас шатра изготовлен
            из высококачественного алюминия. На боковых стенках имеется два входа на молнии. При желании все стены
