--- a/contact.html
+++ b/contact.html
@@ -29,12 +29,13 @@
         <li><a href="index.html" >Организация отдыха (Главная) </a></li>
         <li><a href="sauna.html">Мобильная баня</a></li>
         <li><a href="#" class="active"> Контакты </a></li>
+        <li><a href="catalog/bigTentTable.html"> Таблицы задание </a></li>
     </ul>
     </div>
     <hr>
     <div class="headText">
-        <form>
-        Ваше имя <input type="text" class="inputValue" placeholder="Ваше имя"><br><br>
+        <form id="contacts">
+        Ваше имя <input type="text" class="inputValue bigLetter" placeholder="Ваше имя"><br><br>
         Номер телефона <input type="text" class="inputValue" placeholder="номер телефона"><br><br>
         Удобное для вас время звонка <input type="text" class="inputValue" placeholder="с 8.00 до 9.00"><br><br>
         Что вы потите арендовать?<br>
