--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     </head>
 <body>
     <div class="content">
+    <div class="header">
     <tr>
         <td>
             <img src="images/Logo.jpg" width="230" height="160" class="rightimg" alt="Логотип Picknic.by">
@@ -29,7 +30,10 @@
         <li><a href="#"  class="active">Организация отдыха (Главная) </a></li>
         <li><a href="sauna.html">Мобильная баня</a></li>
         <li><a href="contact.html"> Контакты </a></li>
+        <li><a href="catalog/bigTentTable.html"> Таблицы задание </a></li>
+
     </ul>
+    </div>
     </div>
     <hr>
     <div class="headText">
@@ -41,7 +45,7 @@
             
             Отдых на природе — это возможность переключиться, надышаться свежим воздухом, ощутить душевный покой, насладиться солнцем, лесом, озером…
             <br><br>
-            Уже хочется!?) </p>
+            Уже хочется!?:) </p>
 
 
     </div>
