--- a/sauna.html
+++ b/sauna.html
@@ -29,6 +29,7 @@
         <li><a href="index.html" >Организация отдыха (Главная) </a></li>
         <li><a href="sauna.html" class="active">Мобильная баня</a></li>
         <li><a href="contact.html"> Контакты </a></li>
+        <li><a href="catalog/bigTentTable.html"> Таблицы задание </a></li>
     </ul>
     </div>
     <hr>
