--- a/rent.html
+++ b/rent.html
@@ -29,6 +29,7 @@
         <li><a href="index.html" >Организация отдыха (Главная) </a></li>
         <li><a href="sauna.html">Мобильная баня</a></li>
         <li><a href="contact.html"> Контакты </a></li>
+        <li><a href="catalog/bigTentTable.html"> Таблицы задание </a></li>
     </ul>
     </div>
     <hr>
@@ -45,6 +46,8 @@
                 <a href="catalog/bigTent.html"><img src="images/bigTent.jpg" width="200" height="150" class="centerImg imgBorder" alt="Шатер"></a>
                 <p class="shortDescription">Ширина: 4 м<br> Длина: 3 м<br> Высота 2 м  </p>
                 <p class="rentText"><a href="catalog/bigTent.html"> Подробнее </a></p>
+                
+
             </td>
             <td>
                 <p class="rentText"> Шатер большой</p>
